Measure the handle boundary at the floor, and settle where this work can be built
Two things .todo/501 and .todo/504 were stating as intentions are now
measurements, and one of them corrects how the earlier filing reads.

The 2.5-2.9 ms "3x slower than Java" number was the naive copying API, measured
in order to rule it out -- but filed next to the 3x win without saying which was
the plan, so it read as the cost of going through rontolisp at all. It is not.
The opaque handle .todo/504 proposes sits AT the raw pre-packed floor: 0.267 ms
against 0.266-0.301 raw, 3.3x the C2-auto-vectorized Java loop's 0.90, with the
extra getfield below measuring noise. So the target of the whole item is 3.3x and
504 is how it is kept, not a tradeoff to tune. Spiked (handle facade over the
packed array) and reverted; 300 iterations after 3000 warm-up calls.

That leaves 504 with one real fork, which the numbers do not decide: where the
handle TYPE comes from. Emitting it per library keeps the artifact
dependency-free, which is this codebase's house style, but then two rontolisp
libraries have incompatible vector types and cannot chain -- the first thing
anyone will try. A shared rontolisp-runtime artifact costs one dependency and is
what every JVM language does. Recommended, with the tension named, because the
option that avoids both -- export double[] and document the packed layout as ABI
-- puts back exactly the failure mode 503 item 5 is about: norm2(plainArray)
would compile and answer a wrong number.

Also recorded, since it was hedged as "two alternatives for different
consumers": the consumption strategy is one story with two entry points, and the
Maven plugin is the primary one. In-project, the Lisp is another source set and
Maven packages target/classes as it always has; shipped-library, the CLI writes
the jar with its coordinates inside it. What a consumer needs beyond the jar is
short and now written down: nothing for scalar exports, rontolisp-runtime for
array exports, --a